--- a/package.json
+++ b/package.json
@@ -4,11 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsc --watch"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "configurainterface": "^1.0.1"
+    "axios": "^1.7.2",
+    "configurainterface": "^1.0.1",
+    "vuex": "^4.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.14.11",
+    "@vue/compiler-sfc": "^3.4.32",
+    "@vue/runtime-dom": "^3.4.32",
+    "babel-loader": "^8.2.5",
+    "copy-webpack-plugin": "^10.2.0",
+    "express": "^4.18.2",
+    "ts-loader": "^9.2.6",
+    "typescript": "^5.5.3",
+    "vue": "^3.2.41",
+    "vue-loader": "^17.3.1",
+    "webpack": "^5.1.0",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0"
   }
 }
