--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "configurainterface": "^1.0.1",
+    "element-plus": "^2.7.7",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
@@ -24,6 +25,8 @@
     "typescript": "^5.5.3",
     "vue": "^3.2.41",
     "vue-loader": "^17.3.1",
+    "vue-style-loader": "^4.1.3",
+    "css-loader": "^5.0.0",
     "webpack": "^5.1.0",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0"
