--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,20 +1,26 @@
 {
-    // 使用 IntelliSense 了解相关属性。 
-    // 悬停以查看现有属性的描述。
-    // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "启动程序11",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "program": "${workspaceFolder}\\examples\\webpack.config.js",
-            "outFiles": [
-                "${workspaceFolder}/server.js"
-            ]
-        }
-    ]
+  // 使用 IntelliSense 了解相关属性。
+  // 悬停以查看现有属性的描述。
+  // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+        "type": "node",
+        "request": "launch",
+        "name": "Debug Jest Tests",
+        "program": "${workspaceFolder}/node_modules/.bin/jest.js",
+        "args": ["--runInBand", "${workspaceFolder}/src/__tests__"],
+        "console": "integratedTerminal",
+        "internalConsoleOptions": "neverOpen",
+        "cwd": "${workspaceFolder}"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "启动程序11",
+      "skipFiles": ["<node_internals>/**"],
+      "program": "${workspaceFolder}\\examples\\webpack.config.js",
+      "outFiles": ["${workspaceFolder}/server.js"]
+    }
+  ]
 }
