--- a/examples/static/config.json
+++ b/examples/static/config.json
@@ -13,7 +13,8 @@
                     "icon": "sw-paging-first",
                     "code": "jump",
                     "value": "|<",
-                    "hideText": true
+                    "hideText": true,
+                    "hide": true
                 },
                 {
                     "id": "paging_prev",
